[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "0.0"

[project]
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
name = "nomad-distribution"
description = "nomad distribution template"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
  "nomad-lab[parsing, infrastructure]>=1.4.0",
  "setuptools",
  "natsort",
  "fpdf"
  ]


[project.urls]
repository = "https://github.com/FAIRmat-NFDI/nomad-distro-template"

[project.optional-dependencies]
plugins = [
  "perovskite-solar-cell-database @ git+https://github.com/FAIRmat-NFDI/nomad-perovskite-solar-cells-database.git@v0.1.1",
  #"nomad-porous-materials @ git+https://github.com/FAIRmat-NFDI/nomad-porous-materials.git@522f4a3208077f534f1c5e886527ee2104283d0b",
  #"nomad-aitoolkit @ git+https://github.com/FAIRmat-NFDI/nomad-aitoolkit.git@b203f8eb28dc4b6771a39d5c5b7ad3d9d8583ac8",
  #"nomad-simulations==0.5.0",
  #"nomad-schema-plugin-run>=1.0.1",
  #"nomad-schema-plugin-simulation-workflow>=1.0.1",
  #"nomad-normalizer-plugin-bandstructure>=1.0",
  #"nomad-normalizer-plugin-dos>=1.0",
  #"nomad-normalizer-plugin-soap>=1.0",
  #"nomad-normalizer-plugin-spectra>=1.0",
  #"nomad-normalizer-plugin-system>=1.0",
  #"nomad-normalizer-plugin-simulation-workflow>=1.0",
  #"eelsdbconverter @ git+https://github.com/nomad-coe/nomad-parser-eelsdb.git@entry-point",
  #"nomad-parser-plugins-electronic>=1.0",
  #"nomad-parser-plugins-atomistic>=1.0",
  #"nomad-parser-plugins-workflow>=1.0",
  #"nomad-parser-plugins-database>=1.0",
  "nomad-material-processing",
  #"nomad-synthesis @ git+https://github.com/FAIRmat-NFDI/AreaA-data_modeling_and_schemas.git", Error!
  "nomad-baseclasses @ git+https://github.com/nomad-hzb/nomad-baseclasses.git@f7343aa18d69feab9ca9e95ff0d45ddc3428a7a3", #Dec 15, 2025
  "nomad-perolab-umr @ git+https://github.com/AG-SEK/nomad-perolab-umr-plugin.git@5cc26dc3071477b7e1499514bea7e41fd5061112", #Jan 9, 2026
  #"nomad-hysprint @ git+https://github.com/nomad-hzb/nomad-hysprint.git",
  "Solar @ git+https://gitlab.uni-marburg.de/fb13/ag-goldschmidt/solar-repository.git@06bf5afcf694e2dbe97a614e36f4fd3684b99465", # Jan 8, 2026
  "nomad-luqy-plugin @ git+https://github.com/Pepe-Marquez/nomad-luqy-plugin.git@fcbee16c352d367512cb5312c66b34e3f5d21ac3", # jul 8, 2025
  #'hzb-combinatorial-libraries @ git+https://github.com/nomad-hzb/hzb-combinatorial-libraries-plugin.git',
  #'nomad-chemical-energy @ git+https://github.com/nomad-hzb/nomad-chemical-energy.git',
  #"nomad-pvcomb @ git+https://codebase.helmholtz.cloud/pvcomb/nomad-pvcomb.git@develop"
]
jupyter = [
  "jupyter-events",
  'voila',
  'fpdf',
  #'ipyaggrid',
  #'ipysheet',
  #'ipydatagrid',
  'jupyter-flex',
  #'pyvis'
]

dev = ["nomad-lab[parsing, infrastructure, dev]>=1.4.0"]
gpu-action = []
cpu-action = []

[tool.uv]
extra-index-url = [
  "https://gitlab.mpcdf.mpg.de/api/v4/projects/2187/packages/pypi/simple",
]
prerelease = "explicit"

[tool.setuptools.packages.find]
exclude = ["gui*", "docs*", "config*"]
